fixed display-3 heading sizes on smaller screens

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,4 +1,67 @@
 // RESPONSIVE CSS
+
+// XL DESKTOP
+// ==========================================================
+@media screen and (min-width: 1199px) {
+  .row.v-margin-col-fix {
+    .col-12.col-md-6.col-xl-3 {
+      &:nth-child(3),
+      &:nth-child(4) {
+        margin-top: 0;
+      }
+    }
+  }
+}
+
+
+
+// DESKTOP
+// ==========================================================
+@media screen and (min-width: 768px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+  }
+  .nav-item.active a {
+    background: transparent -webkit-linear-gradient(left, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
+    background: transparent -o-linear-gradient(left, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
+    background: transparent linear-gradient(to right, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
+    background-size: 202% 1px;
+    background-position: 100% 100%;
+  }
+  .grid-container {
+    .grid-row {
+      margin-top: 10rem;
+    }
+    .grid-row:first-child {
+      margin-top: 0;
+    }
+  }
+  .row.v-margin-col-fix {
+    .col-md-6 {
+      &:nth-child(3),
+      &:nth-child(4) {
+        margin-top: 5rem;
+      }
+    }
+  }
+  .offset-paragraph {
+    padding-right: 10rem;
+  }
+  .visible-mobile {
+    display: none;
+    visibility: hidden;
+  }
+  .visible-desktop {
+    display: block;
+    visibility: visible;
+  }
+}
+
+
+
 // MOBILE
 // ==========================================================
 @media screen and (max-width: 767px) {
@@ -106,61 +169,9 @@
 
 
 
-// DESKTOP
-// ==========================================================
-@media screen and (min-width: 768px) {
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-left: 0;
-    padding-right: 0;
-    margin-right: 1.5rem;
-    margin-left: 1.5rem;
-  }
-  .nav-item.active a {
-    background: transparent -webkit-linear-gradient(left, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
-    background: transparent -o-linear-gradient(left, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
-    background: transparent linear-gradient(to right, #fff 50%, rgba(156, 158, 165, 0.6) 0%) no-repeat;
-    background-size: 202% 1px;
-    background-position: 100% 100%;
-  }
-  .grid-container {
-    .grid-row {
-      margin-top: 10rem;
-    }
-    .grid-row:first-child {
-      margin-top: 0;
-    }
-  }
-  .row.v-margin-col-fix {
-    .col-md-6 {
-      &:nth-child(3),
-      &:nth-child(4) {
-        margin-top: 5rem;
-      }
-    }
-  }
-  .offset-paragraph {
-    padding-right: 10rem;
-  }
-  .visible-mobile {
-    display: none;
-    visibility: hidden;
-  }
-  .visible-desktop {
-    display: block;
-    visibility: visible;
-  }
-}
-
-
-// XL DESKTOP
-// ==========================================================
-@media screen and (min-width: 1199px) {
-  .row.v-margin-col-fix {
-    .col-12.col-md-6.col-xl-3 {
-      &:nth-child(3),
-      &:nth-child(4) {
-        margin-top: 0;
-      }
-    }
+// SUPER SMALL MOBILE
+@media screen and (max-width: 350px) {
+  .display-3 {
+    font-size: 2rem;
   }
 }
